objects/Account.object
<CustomObject>
    <fields>
        <fullName>Collection_Contact_Name__c</fullName>
        <label>Collection Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Contact_Number__c</fullName>
        <label>Collection Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Collection_Frequency__c</fullName>
        <label>Collection Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Notes__c</fullName>
        <label>Collection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collection_Office__c</fullName>
        <label>Collection Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Burr_Ridge</fullName>
                    <label>Burr Ridge</label>
                </value>
                <value>
                    <fullName>Champaign</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Dubuque</fullName>
                </value>
                <value>
                    <fullName>Glen Carbon</fullName>
                </value>
                <value>
                    <fullName>Lincoln</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Sioux City</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
                <value>
                    <fullName>Watseka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Region__c</fullName>
        <label>Collection Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collection_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissioned_As__c</fullName>
        <label>Commissioned As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Terminals__c</fullName>
        <label>Committed Terminals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_of_Terminals__c</fullName>
        <label>Committed # of Terminals</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Redemption__c</fullName>
        <label>Competitor Redemption</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_TO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor TO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor TO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Termination_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Termination Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_VGT_1__c</fullName>
        <label>Competitor VGT 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_VGT_2__c</fullName>
        <label>Competitor VGT 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_VGT_3__c</fullName>
        <label>Competitor VGT 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_VGT_Count__c</fullName>
        <formula>If(ISBLANK(TEXT(Competitor_VGT_1__c)),0,1)+
If(ISBLANK(TEXT(Competitor_VGT_2__c)),0,1)+
If(ISBLANK(TEXT(Competitor_VGT_3__c)),0,1)+
If(ISBLANK(TEXT(Competitor_VGT_4__c)),0,1)+
If(ISBLANK(TEXT(Competitor_VGT_5__c)),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total number of competitor vgt fields that are populated.</inlineHelpText>
        <label>Competitor VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concierge_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concierge Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Problem__c</fullName>
        <label>Contract Problem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel signed over another operator</fullName>
                </value>
                <value>
                    <fullName>Another operator signed over Accel</fullName>
                </value>
                <value>
                    <fullName>Change of business name</fullName>
                </value>
                <value>
                    <fullName>Change of ownership</fullName>
                </value>
                <value>
                    <fullName>Lease prohibits gaming</fullName>
                </value>
                <value>
                    <fullName>Not executed properly</fullName>
                </value>
                <value>
                    <fullName>Not interested in gaming</fullName>
                </value>
                <value>
                    <fullName>Not returning calls</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner refuses to honor agreement</fullName>
                </value>
                <value>
                    <fullName>Suspected legal issue</fullName>
                </value>
                <value>
                    <fullName>Suspected tax issue</fullName>
                </value>
                <value>
                    <fullName>We suspect location is out of business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracted_of_VGT_Per_year__c</fullName>
        <label>Contracted # of VGT Per year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_of_VGT_This_Year__c</fullName>
        <label>Contracted # of Software Per Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Controller_G2S_Compatible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controller G2S Compatible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County_Auto_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the the County__c was auto updated with FCC (Federal Communication Commission) API Data. https://geo.fcc.gov/api/census/#!/block/get_block_find</description>
        <inlineHelpText>Indicates that the County__c was auto updated with FCC (Federal Communication Commission) API Data.</inlineHelpText>
        <label>County Auto Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County_LU_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POC</description>
        <inlineHelpText>POC</inlineHelpText>
        <label>County LU Auto Updated (POC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Updated by Google within 1-3 seconds after creating a new account with an address or updating an account to a new address.</description>
        <inlineHelpText>Updated by Google within 1-3 seconds after creating a new account with an address or updating an account to a new address.</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>This will be updated about 1-2 minutes after a new account is created or account has changed if there is accurate enough physical location information to determine the county.</description>
        <inlineHelpText>This will be updated about 1-2 minutes after a new account is created or account has changed if there is accurate enough physical location information to determine the county.</inlineHelpText>
        <label>County (TEXT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covid_Region_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Based on the County selected. Updated by Google within 1-3 seconds after creating a new account with an address or updating an account to a new address.</description>
        <inlineHelpText>Based on the County selected. Updated by Google within 1-3 seconds after creating a new account with an address or updating an account to a new address.</inlineHelpText>
        <label>Covid Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Region__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Covid</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Covid_Region__c</fullName>
        <description>POC COUNTY -&gt; REGION</description>
        <formula>County_LU__r.Covaid_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>POC COUNTY -&gt; REGION</inlineHelpText>
        <label>Covid Region (POC FF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RT_Count__c</fullName>
        <label>Current RT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Relaunch_Count__c</fullName>
        <label>Current Relaunch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_VGT_Count__c</fullName>
        <label>Current VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DBA_Account_Name__c</fullName>
        <label>DBA Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOJ_Expiration_Date__c</fullName>
        <label>DOJ Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOJ_File_Number__c</fullName>
        <label>DOJ File Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOJ_Request_Sent_Date__c</fullName>
        <label>DOJ Request Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Addendum_Uploaded_to_RTT_System__c</fullName>
        <label>Date Addendum Uploaded to DUS System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TUA_Extension_Upload_to_RTT_System__c</fullName>
        <label>Date TUA Extension Upload to DUS System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TUA_Purchased__c</fullName>
        <label>Date Agreement Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_TUA_Uploaded_to_RTT_System__c</fullName>
        <label>Date TUA Uploaded to DUS System</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Visit__c</fullName>
        <label>Date of Last Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Live__c</fullName>
        <formula>TODAY() - Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY () -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_PM_Visit__c</fullName>
        <formula>today() - Last_PM_Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last PM Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Special_Project__c</fullName>
        <formula>today() -  Last_Special_Project_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Special Project</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Visit__c</fullName>
        <formula>TODAY()- Date_of_Last_Visit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_VGT_Live_Date__c</fullName>
        <formula>today() -  Accel_VGT_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since VGT Live Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Divider_Global_Picklist__c</fullName>
        <label>Divider Global Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Divider_Global_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_Owner_Have_Other_Locations2__c</fullName>
        <label>Does the Owner Have Other Locations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_Owner_Have_Other_Locations__c</fullName>
        <label>Does the Owner Have Other Locations?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DraftKings_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DraftKings Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAR_HPD_Calc__c</fullName>
        <formula>/*IF(AND(ISNULL( HPD_TTM__c ),ISNULL( Three_Month_Average_HPD__c ),&quot;3&quot;,
(IF(isnull(HPD_TTM__c),&quot;2&quot;),
&quot;1&quot;)))*/

/*IF(AND(ISNULL( HPD_TTM__c ),ISNULL( Three_Month_Average_HPD__c )),&quot;3&quot;,(IF(ISNULL(HPD_TTM__c),&quot;2&quot;,&quot;1&quot;)
))*/

IF(AND( HPD_TTM__c =0 , Three_Month_Average_HPD__c =0),&quot;3&quot;,(IF(HPD_TTM__c=0,&quot;2&quot;,&quot;1&quot;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAR HPD Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAR_Opp__c</fullName>
        <label>EAR Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EAR_VGT_Count_Calc__c</fullName>
        <formula>/*IF(AND( HPD_TTM__c =0 , Three_Month_Average_HPD__c =0),&quot;3&quot;,(IF(HPD_TTM__c=0,&quot;2&quot;,&quot;1&quot;)
))*/

IF(AND(  Most_Recent_HPD_VGT_Count__c  =0 , OR( ISBLANK(   Committed_Terminals__c   ), Committed_Terminals__c    =0)),6,(IF( Most_Recent_HPD_VGT_Count__c=0,(Committed_Terminals__c ), Most_Recent_HPD_VGT_Count__c )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAR VGT Count Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Revenue__c</fullName>
        <formula>CASE( EAR_HPD_Calc__c,
&quot;3&quot;,
IF( EAR_VGT_Count_Calc__c = 6,
(Estimated_HPD__c * 6 * 365 * 0.3257 * 0.9),
IF(EAR_VGT_Count_Calc__c &lt;6,
(Estimated_HPD__c * EAR_VGT_Count_Calc__c * 365 * 0.3257),
NULL)),
&quot;2&quot;,
(Three_Month_Average_HPD__c * EAR_VGT_Count_Calc__c * 365 * 0.3257),
(HPD_TTM__c * EAR_VGT_Count_Calc__c * 365 * 0.3257))






/*IF(Current_VGT_Count__c &gt; 0,
IF(HPD_TTM__c != 0, HPD_TTM__c * 365 * Current_VGT_Count__c * 0.33, 
IF(Three_Month_Average_HPD__c != 0, Three_Month_Average_HPD__c * 365 * Current_VGT_Count__c * 0.33,
Estimated_HPD__c * 365 * Current_VGT_Count__c * 0.33)),
IF(HPD_TTM__c != 0, HPD_TTM__c * 365 * 5 * 0.33, 
IF(Three_Month_Average_HPD__c != 0, Three_Month_Average_HPD__c * 365 * 5 * 0.33,
Estimated_HPD__c * 365 * 5 * 0.33)))*/



/*
IF(NOT(ISBLANK(HPD_TTM__c)), HPD_TTM__c * 365 * 5 * 0.34,
IF(NOT(ISBLANK(Three_Month_Average_HPD__c)), Three_Month_Average_HPD__c * 365 * 5 * 0.34, 
Estimated_HPD__c * 365 * 5 * 0.34))
*/

/*
IF(HPD_TTM__c !=null, HPD_TTM__c * 365 * 5 * 0.34, 

Estimated_HPD__c * 365 * 5 * 0.34)

*/


/*
IF(Most_Recent_Hold_Per_Day__c !=null,Most_Recent_Hold_Per_Day__r.HPD__c * 365 * 5 * 0.34,Estimated_HPD__c * 365 * 5 * 0.34)
*/</formula>
        <inlineHelpText>This value is calculated as follows:
Estimated Annual Revenue = HPD x # of VGTs in this location x 365 x 0.3257</inlineHelpText>
        <label>Estimated Annual  Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_HPD__c</fullName>
        <description>Auto Calculated HPD estimate based on Tier</description>
        <label>Estimated HPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Value_to_Accel__c</fullName>
        <formula>If( Years_to_Expiration__c &gt;= 8,0.2,if(Years_to_Expiration__c &gt;=7,0.6,if(Years_to_Expiration__c&gt;=4,0.8,if(Years_to_Expiration__c&gt;=0,1.0,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Value to Accel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension_1_Date__c</fullName>
        <label>Extension 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_2_Date__c</fullName>
        <label>Extension 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_3_Date__c</fullName>
        <label>Extension 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Signed__c</fullName>
        <label>Extension Signed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>True</fullName>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id (Used for MS CRM Migration)</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FEIN_Number__c</fullName>
        <label>FEIN Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSG_Relationship_Manager__c</fullName>
        <label>FSG Relationship Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gigi John</fullName>
                </value>
                <value>
                    <fullName>Trisha Madura</fullName>
                </value>
                <value>
                    <fullName>Gigi John/Trisha Madura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Filtered_Location_Type__c</fullName>
        <formula>CASE(text(Location_Type__c), 
&quot;Adult Entertainment&quot;, &apos;Other&apos;,
&quot;American Legion&quot;, &apos;Fraternal/VFW&apos;,
&quot;Bar&quot;, &apos;Bar&apos;,
&quot;Bar &amp; Grill&quot;, &apos;Bar&apos;,
&quot;Bowling Alley&quot;, &apos;Other&apos;,
&quot;C-Store&quot;, &apos;C-Store&apos;,
&quot;C-Store W/O Gas&quot;, &apos;C-Store&apos;,
&quot;Fraternal&quot;, &apos;Fraternal/VFW&apos;,
&quot;Gaming Parlor&quot;, &apos;Gaming Parlor&apos;,
&quot;Golf Course&quot;, &apos;Other&apos;,
&quot;Hotel&quot;, &apos;Other&apos;, 
&quot;Liquor Store&quot;, &apos;C-Store&apos;,
&quot;OTB&quot;, &apos;Other&apos;,
&quot;Private Club&quot;, &apos;Fraternal/VFW&apos;,
&quot;Recreation (Comedy,Billiards)&quot;, &apos;Other&apos;,
&quot;Restaurant&quot;, &apos;Restaurant&apos;,
&quot;Truck Stop&quot;, &apos;Truck Stop&apos;,
&quot;Grocery Store&quot;, &apos;Grocery Store&apos;,
&quot;VFW&quot;, &apos;Fraternal/VFW&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filtered Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Region_Formula__c</fullName>
        <formula>CASE(  Service_Territory__r.Name, 
&quot;Watseka&quot;, &quot;Champaign&quot;,
&quot;Chicagoland South&quot;, &quot;Burr Ridge&quot;,
&quot;Collinsville&quot;,	&quot;Collinsville&quot;,
&quot;Chicagoland - Tinley Park&quot;, &quot;Tinley Park&quot;,
&quot;Rockford&quot;, &quot;Rockford&quot;,
&quot;Peoria&quot;, &quot;Peoria&quot;,
&quot;Collinsville - EQS Amusement&quot;, &quot;Collinsville&quot;,
&quot;Springfield&quot;, &quot;Springfield&quot;,
&quot;Chicagoland North&quot;, &quot;Burr Ridge&quot;,
&quot;Champaign&quot;, &quot;Champaign&quot;,
&quot;Chicagoland - Shamrock&quot;, &quot;Burr Ridge&quot;,
&quot;Chicagoland - Lakeshore&quot;, &quot;Burr Ridge&quot;,
&quot;Chicagoland - Advanced&quot;, &quot;Burr Ridge&quot;,
&quot;Collinsville - D &amp; S Vending&quot;, &quot;Collinsville&quot;,
&quot;Rockford - Rich &amp; Junnies&quot;,&quot;Rockford&quot;,
&quot;Chicagoland - AVG&quot;, &quot;Burr Ridge&quot;,
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Region</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Accounts (Finance Region)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fingerprinting_Complete_Date__c</fullName>
        <label>Fingerprinting Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fingerprinting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fingerprinting Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlowCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlowCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Bypass_Check__c</fullName>
        <formula>Flow_Bypass__c &gt; Now() - 0.000055</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flow Bypass Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Bypass__c</fullName>
        <label>Flow Bypass</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for when account is edited flows</description>
        <label>Force Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Former_Location_Name__c</fullName>
        <label>Former Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funds_Pulled_From_Location__c</fullName>
        <description>The day funds are to be pulled from a location closing</description>
        <label>Funds Pulled From Location</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_Pulled_VGT_Disabled_Reason__c</fullName>
        <label>Funds Pulled / VGT Disabled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired License</fullName>
                </value>
                <value>
                    <fullName>Full Site Removal</fullName>
                </value>
                <value>
                    <fullName>Location Closed</fullName>
                </value>
                <value>
                    <fullName>Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Out of Compliance</fullName>
                </value>
                <value>
                    <fullName>Temporary Closure</fullName>
                </value>
                <value>
                    <fullName>Post Burglary</fullName>
                </value>
                <value>
                    <fullName>Delayed Reopening</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Remodel/ No VGTS on Site</fullName>
                </value>
                <value>
                    <fullName>Unable to Gain Access</fullName>
                </value>
                <value>
                    <fullName>Temp Closure - Covid Mitigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_in_Field__c</fullName>
        <label>Funds in Field</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crash Bag</fullName>
                </value>
                <value>
                    <fullName>NRT $20 Cassette</fullName>
                </value>
                <value>
                    <fullName>M3T Crash Bag</fullName>
                </value>
                <value>
                    <fullName>Coin Bag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Lock_Region__c</fullName>
        <label>Future Lock Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Chicagoland</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Champaign/Watseka</fullName>
                </value>
                <value>
                    <fullName>Peoria</fullName>
                </value>
                <value>
                    <fullName>Grand River Jackpot</fullName>
                    <isActive>false</isActive>
                    <label>Grand River Jackpot</label>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                    <isActive>false</isActive>
                    <label>Tinley Park</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>